Fixed a funny rendering problem with the heading font getting cut off

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -34,13 +34,15 @@
 	  float: right;
 	  border-top: 1px dotted #999;
 	  border-bottom: 1px dotted #999;
-	  padding: 30px 0;
+	  padding: 0 0 30px 0;
 		a { color: #2D7D06; text-decoration: none; border-bottom: 1px solid #246605; }
 		a:hover { color: #246605; }
 	  h1 {
 			font-family: "Lavanderia", Helvetica, sans-serif;
 			font-size: 50px;
 			margin: 10px 0 15px 0;
+			height: 80px;
+			line-height: 120px;
 			text-shadow: 0 2px 0 #fff;
 			a { border-bottom: none; -webkit-transition: all 0.5s; }
 			a:hover { color: #359006; }
